@@ -1,3 +1,5 @@
+(2001/01/04 - broeker) Survive Cygwin "binmode" mounted filesystems by 
+	               explicitly forcing text mode for source files.
 (2002/01/02 - broeker) Updated files supplied or generated by automake to 
 	               version 1.4-p5, the current recommended version in the
 		       1.4 series.
